--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -17,6 +17,7 @@ body {
     padding: 10px 20px;
     transition: transform 0.4s;
     width: 600px;
+    height: 500px;
     text-align: center;
 }
 
